# ytdlp-plugins

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  activate_venv.ps1  activate_venv.sh  conftest.py  pyproject.toml  pyvenv.py  requirements.in  requirements.txt  setup.cfg  use_venv.py
test/: helper.py  test_download.py  test_helper.py  test_plugins.py  test_utils.py  ytdlp_auf1-2022.11.28-py3-none-any.whl
yt_dlp_plugins/extractor/: auf1.py  brighteon.py  dtube.py  myplugin.py  servustv.py  youmaker.py
ytdlp_plugins/: __init__.py  __main__.py  _helper.py  ast_utils.py  generic.py  patching.py  probe.py  test_download.py  utils.py
ytdlp_plugins/extractor/: auf1.py  bittube.py  brighteon.py  dtube.py  example.py  exampleB.py  myplugin.py  override.py  servustv.py  youmaker.py
ytdlp_plugins/postprocessor/: example.py  exampleB.py
