[metadata]
name = ytdlp-plugins
version = 2022.06.25
author = flashdagger
author_email = flashdagger@googlemail.com
url = https://github.com/flashdagger/ytdlp-plugins
description = a plugin manager for yt-dlp
long_description = file: README.md
long_description_content_type = text/markdown
license = The Unlicense
platform = any
keywords =
  yt-dlp
  youtube-dl
  extractors
  plugins
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: The Unlicense (Unlicense)
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Operating System :: OS Independent
  Environment :: Console
  Environment :: Plugins
  Topic :: Multimedia :: Video


[options]
python_requires = >= 3.6
packages = ytdlp_plugins
zip_safe = False
install_requires =
    yt-dlp >= 2021.10.9
    typing_extensions; platform_python_implementation == 'PyPy'


[options.package_data]
ytdlp_plugins = *.json


[options.entry_points]
console_scripts =
    ytdlp-plugins = ytdlp_plugins.__main__:main


[build-system]
requires = 
    setuptools
    wheel


[bdist_wheel]
universal = False


[sdist]
formats = zip
