[metadata]
name = ytdlp-youmaker
version = 2023.01.10
author = flashdagger
author_email = flashdagger@googlemail.com
url = https://github.com/flashdagger/ytdlp-plugins/tree/youmaker
description = yt-dlp extractor for youmaker.com
long_description = file: README.md
long_description_content_type = text/markdown
license = The Unlicense
platform = any
keywords =
  yt-dlp
  youtube-dl
  youmaker
  extractors
  plugins
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: The Unlicense (Unlicense)
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: Implementation
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Operating System :: OS Independent
  Environment :: Console
  Environment :: Plugins
  Topic :: Multimedia :: Video


[options]
python_requires = >= 3.7
packages = find_namespace:
zip_safe = False
install_requires =
    yt-dlp >= 2023.01.06


[options.packages.find]
exclude =
    test
    build.*
    venv.*


[build-system]
requires = 
    setuptools
    wheel


[bdist_wheel]
universal = False


[sdist]
formats = zip
